--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,16 @@ repositories {
 }
 
 dependencies {
+    compile("com.sun.xml.bind:jaxb-core:2.3.0")
+    compile("com.sun.xml.bind:jaxb-impl:2.3.0")
+    compile("javax.activation:activation:1.1.1")
+    compile("javax.xml.bind:jaxb-api:2.3.0")
+    compile("org.glassfish.jersey.containers:jersey-container-grizzly2-http:2.28")
+    compile("org.glassfish.jersey.containers:jersey-container-servlet:2.28")
+    compile("org.glassfish.jersey.core:jersey-common:2.28")
+    compile("org.glassfish.jersey.core:jersey-server:2.28")
+    compile("org.glassfish.jersey.inject:jersey-hk2:2.28")
+    compile("org.glassfish.jersey.media:jersey-media-json-jackson:2.28")
 
     testCompile("junit':junit:4.12")
 }
