--- a/build.gradle
+++ b/build.gradle
@@ -23,5 +23,7 @@ dependencies {
     compile("org.glassfish.jersey.inject:jersey-hk2:2.28")
     compile("org.glassfish.jersey.media:jersey-media-json-jackson:2.28")
 
-    testCompile("junit':junit:4.12")
+    testCompile("junit:junit:4.12")
+    testCompile("org.assertj:assertj-core:3.11.1")
+    testCompile("org.mockito:mockito-core:2.23.4")
 }
